--- a/anaktuhan/pom.xml
+++ b/anaktuhan/pom.xml
@@ -35,6 +35,11 @@
       <artifactId>javafx-fxml</artifactId>
       <version>12.0.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.xerial</groupId>
+      <artifactId>sqlite-jdbc</artifactId>
+      <version>3.32.3.2</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -84,7 +89,7 @@
           <artifactId>javafx-maven-plugin</artifactId>
           <version>0.0.6</version>
           <configuration>
-            <mainClass>tutor/com.example.tutor.App</mainClass>
+            <mainClass>com.example.anaktuhan.App</mainClass>
           </configuration>
         </plugin>
       </plugins>
